Started working on issue #2. Current plan is to implement hovered bootstrap cards on desktop then find a way to trigger or display them on mobile in a different manner.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,8 +3,6 @@
 # only Main files contain this front matter, not partials.
 ---
 
-// ! MY CSS. MOVE THIS AROUND LATER
-
 body {
   width: 100%;
   height: 100%;
@@ -241,6 +239,9 @@ margin: auto;
   grid-template-columns: 50% 50%;
 }
 
+#lt511 {
+  display: none;
+}
 
  /* !-------------------------------------------------------------------------- */
  /* !                             My Media Queries                              */
@@ -252,6 +253,7 @@ margin: auto;
   #promo_text {
     font-size: 0.4em;
     justify-self: center;
+    text-align: center;
   }
   #promo_center {
     width: 90%;
@@ -260,6 +262,15 @@ margin: auto;
   #bottom_image {
     // ! WHY TF WON'T THIS CENTER
     justify-content: center;
+  }
+}
+
+@media screen and (max-width: 511px) {
+  #gt511 {
+    display: none;
+  }
+  #lt511 {
+    display: block;
   }
 }
 
@@ -341,6 +352,13 @@ margin: auto;
   .dual_container_item {
     font-size: 0.9em;
   }
+  .banner-h1-text {
+    text-align: center;
+  }
+  .banner-btn {
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 
@@ -398,8 +416,8 @@ margin: auto;
     background: black;
     background: linear-gradient(
       60deg,
-      rgba(0, 0, 0, 0.7777485994397759) 30%,
-      rgba(255, 255, 255, 0) 100%
+      rgba(0, 0, 0, 0.45) 30%,
+      rgba(0, 0, 0, 0.45) 100%
     );
   }
 
@@ -417,6 +435,7 @@ margin: auto;
     font-weight: bolder;
     text-transform: uppercase;
     color: white;
+    text-align: center;
   }
   
   .banner-body-text {
@@ -441,6 +460,9 @@ margin: auto;
   
   .banner-btn {
     margin-top: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .banner-btn-item {
@@ -463,6 +485,7 @@ margin: auto;
   .banner-btn-item:visited {
     text-decoration: none;
   }
+
  
 
 $csh-pink: #b0197e;
